changes based on suggestions from Matthew England and Hoon Hong

--- a/README
+++ b/README
@@ -2,3 +2,10 @@
 # Started by Chris Brown, 2025
 
 # To build type "make".  Output is: annbib-projection.pdf
+
+* original 2025-04-18
+
+* v2 2025-04-29
+  Incorporated changes suggested by Matthew England and
+  Hoon Hong.
+
