--- a/local.bib
+++ b/local.bib
@@ -26,6 +26,20 @@ Christopher W. Brown},
  year = {2023}
 }
 
+@article{BradfordEtAl:2016,
+title = {Truth table invariant cylindrical algebraic decomposition},
+journal = {Journal of Symbolic Computation},
+volume = {76},
+pages = {1-35},
+year = {2016},
+issn = {0747-7171},
+doi = {https://doi.org/10.1016/j.jsc.2015.11.002},
+url = {https://www.sciencedirect.com/science/article/pii/S0747717115001005},
+author = {Russell Bradford and James H. Davenport and Matthew England and Scott McCallum and David Wilson},
+keywords = {Cylindrical algebraic decomposition, Equational constraint},
+abstract = {When using cylindrical algebraic decomposition (CAD) to solve a problem with respect to a set of polynomials, it is likely not the signs of those polynomials that are of paramount importance but rather the truth values of certain quantifier free formulae involving them. This observation motivates our article and definition of a Truth Table Invariant CAD (TTICAD). In ISSAC 2013 the current authors presented an algorithm that can efficiently and directly construct a TTICAD for a list of formulae in which each has an equational constraint. This was achieved by generalising McCallum's theory of reduced projection operators. In this paper we present an extended version of our theory which can be applied to an arbitrary list of formulae, achieving savings if at least one has an equational constraint. We also explain how the theory of reduced projection operators can allow for further improvements to the lifting phase of CAD algorithms, even in the context of a single equational constraint. The algorithm is implemented fully in Maple and we present both promising results from experimentation and a complexity analysis showing the benefits of our contributions.}
+}
+
 @article{Brown14,
  author = {Christopher W. Brown},
  bibsource = {dblp computer science bibliography, http://dblp.org},
@@ -159,6 +173,16 @@ Evgenii V. Vorozhtsov},
  year = {2020}
 }
 
+@misc{chen:2025,
+      title={A Geometric Approach to Cylindrical Algebraic Decomposition}, 
+      author={Rizeng Chen},
+      year={2025},
+      eprint={2311.10515},
+      archivePrefix={arXiv},
+      primaryClass={math.AG},
+      url={https://arxiv.org/abs/2311.10515}, 
+}
+
 @unpublished{Collins:73b,
  author = {G. E. Collins},
  month = {May},
@@ -239,6 +263,40 @@ Decomposition - 20 Years of Progress},
  year = {2020}
 }
 
+@inproceedings{Han:2014,
+ author = {Han, Jingjun and Dai, Liyun and Xia, Bican},
+ title = {Constructing Fewer Open Cells by GCD Computation in CAD Projection},
+ OPTbooktitle = {Proceedings of the 39th International Symposium on Symbolic and Algebraic Computation},
+ series = {ISSAC '14},
+ year = {2014},
+ isbn = {978-1-4503-2501-1},
+ location = {Kobe, Japan},
+ pages = {240--247},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2608628.2608676},
+ doi = {10.1145/2608628.2608676},
+ acmid = {2608676},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {CAD projection, polynomial, semi-definiteness},
+}
+
+@article{Han:2016,
+title = {Open weak CAD and its applications},
+journal = {Journal of Symbolic Computation},
+volume = {80},
+pages = {785-816},
+year = {2017},
+issn = {0747-7171},
+doi = {https://doi.org/10.1016/j.jsc.2016.07.032},
+url = {https://www.sciencedirect.com/science/article/pii/S0747717116300797},
+author = {Jingjun Han and Liyun Dai and Hoon Hong and Bican Xia},
+keywords = {Open weak CAD, Open weak delineable, CAD projection, Semi-definiteness, Copositivity},
+abstract = {The concept of open weak CAD is introduced. Every open CAD is an open weak CAD. On the contrary, an open weak CAD is not necessarily an open CAD. An algorithm for computing projection polynomials of open weak CADs is proposed. The key idea is to compute the intersection of projection factor sets produced by different projection orders. The resulting open weak CAD often has smaller number of sample points than open CADs. The algorithm can be used for computing sample points for all open connected components of f≠0 for a given polynomial f. It can also be used for many other applications, such as testing semi-definiteness of polynomials and copositive problems. In fact, we solved several difficult semi-definiteness problems efficiently by using the algorithm. Furthermore, applying the algorithm to copositive problems, we find an explicit expression of the polynomials producing open weak CADs under some conditions, which significantly improves the efficiency of solving copositive problems.}
+}
+
+
+
 @inproceedings{Hong:90a,
  author = {H. Hong},
  booktitle = {Proc. International Symposium on Symbolic and
@@ -247,6 +305,14 @@ Algebraic Computation},
  title = {An Improvement of the Projection Operator
 in Cylindrical Algebraic Decomposition},
  year = {1990}
+}
+
+@phdthesis{Hong:90b,
+    author       = "H. Hong",
+    title        = "Improvements in {CAD}--based {Q}uantifier
+                    {E}limination",
+    school       = "The Ohio State University",
+    year         = 1990
 }
 
 @inproceedings{Jovanovic:2013,
@@ -426,6 +492,16 @@ arithmetische Theorien (531314152)},
  title = {Curtains in CAD: Why Are They a Problem and How Do We Fix Them?},
  url = {https://doi.org/10.1007/978-3-030-52200-1_2},
  year = {2020}
+}
+
+@InProceedings{SeidlSturm:03b,
+  author = 	 {A. Seidl and T. Sturm},
+  title = 	 {A generic projection operator for partial cylindrical algebraic decomposition},
+  booktitle = 	 {Proc. International Symposium on Symbolic and Algebraic 
+                  Computation},
+  pages = 	 {240--247},
+  year = 	 {2003},
+  editor = 	 {R. Sendra}
 }
 
 @inproceedings{Strzebonski:2014,
